tenants/ca-download/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ca-download
  labels:
    team: "platform"
