tenants/ca-download/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ca-download
  namespace: ca-download
  labels:
    app.kubernetes.io/name: ca-download
    app.kubernetes.io/instance: ca-download
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ca-download
  template:
    metadata:
      labels:
        app: ca-download
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: ca-cert
              mountPath: /etc/ssl/certs
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

      volumes:
        - name: html
          configMap:
            name: html
        - name: ca-cert
          secret:
            secretName: ca-cert
