tenants/ca-download/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ca-download
  namespace: ca-download
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: websecure
    namespace: gateway-system
  hostnames:
  - "ca.crulabs.intern"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: ca-download
        port: 80
